<resources>
    <string name="app_name">VetPet Proyecto DAM</string>
    <string name="text_login_button">Login</string>
    <string name="text_registro_button">Descubre cómo</string>
    <string name="text_usuario_button_hint">Nombre de usuario ó Email</string>
    <string name="text_email_button_hint">Contraseña</string>
    <string name="text_mi_mascota_button">Mi Mascota</string>
    <string name="text_mi_clinica_veterinaria_button">Mi Clínica Veterinaria</string>
    <string name="text_pedir_cita_button">Pedir Cita</string>
    <string name="text_consulta_online_button">Consulta Online</string>
    <string name="text_agregar_usuario_textview">Añadir Cliente</string>
    <string name="text_agregar_cliente_button">Dar de alta</string>
    <string name="text_agregar_cliente_button_principal">Agregar cliente</string>
    <string name="text_nombre_button">Nombre</string>
    <string name="text_nombre_button_hint">Nombre del cliente</string>
    <string name="text_email_usuario_button">Email</string>
    <string name="text_email_usuario_button_hint">Email del cliente</string>
    <string name="text_registro_principal_textview">¿Aún no formas parte de VetPet?</string>
    <string name="text_registro_textview">Formar parte de VetPet</string>
    <string name="text_correoVetPet_textview">info@vetpet.com</string>
    <string name="text_registro_inicio_textview">¿Cómo formar parte de VetPet?</string>
    <string name="text_registro_map_top_textview">... Busca tu clínica veterinaria asociada a VetPet más próxima ...</string>
    <string name="text_registro_mapa_down_textview">... Y pídele a tu veterinario que te registre en VetPet</string>
    <string name="text_registro_contacto_textview">... Contacta con nosotros a través de los siguientes medios</string>
    <string name="text_bienvenida_mi_veterinario_textview">Mi veterinario</string>
    <string name="text_ver_mapa_button">Ver en mapa</string>
    <string name="text_bienvenida_consulta_online_textview">Consulta Online</string>
    <string name="text_bienvenida_nueva_consulta">Nueva Consulta Online</string>
    <string name="text_seleccionar_imagen_button">seleccionar imagen</string>
    <string name="text_enviar_consulta_button">enviar consulta</string>
    <string name="text_adjuntos_textview">Adjuntos:</string>
    <string name="text_mensaje_textview">Mensaje:</string>
    <string name="text_asunto_textview">Asunto:</string>
    <string name="text_mensaje_editText">Mensaje de la consulta</string>
    <string name="text_consulta_editText">Asunto de la consulta</string>
    <string name="text_obligatorio_textview">(Obligatorio)</string>
    <string name="text_mascota_textview">Mascota</string>
    <string name="text_citas_button">Historial de Citas</string>
    <string name="text_consultas_button">Consultas Online</string>
    <string name="text_tratamientos_button">Tratamientos</string>
    <string name="text_diagnosticos_button">Diagnósticos</string>
    <string name="text_vacunas_button">Vacunas</string>
    <string name="text_bienvenida_historial_citas_toolbar">Historial de Citas</string>
    <string name="text_bienvenida_proximas_citas_toolbar">Próximas Citas</string>
    <string name="text_bienvenida_confirmar_cita_toolbar">Confirmar Cita</string>
    <string name="text_bienvenida_consultas_abiertas_toolbar">Consultas Abiertas</string>
    <string name="text_bienvenida_consultas_cerradas_toolbar">Consultas Cerradas</string>
    <string name="text_motivo_textview">Motivo:</string>
    <string name="text_día_editText">Escoger día de la cita</string>
    <string name="text_hora_editText">Escoger hora de la cita</string>
    <string name="text_dia_textview">Día</string>
    <string name="text_hora_textview">Hora</string>
    <string name="text_mensaje_informativo_confirmar_cita_textview">Puede confirmar su cita rellenando el siguiente formulario o si lo prefiere, puede llamarnos directamente haciendo click en el siguiente botón</string>
    <string name="text_floatingActionButton">Ver</string>
    <string name="textview_mensaje_llamar_consulta_individual">Llamar</string>
    <string name="textview_mensaje_respuesta_consulta_individual">Su veterinario dice...</string>
    <string name="textview_mensaje_countdown">La consulta se cerrará en:</string>
    <string name="textview_separador_countdown">:</string>
    <string name="text_motivo_proximas_citas_textview">Motivo:</string>
    <string name="text_cancelar_cita_textview">Cancelar Cita</string>
    <string name="text_fecha_inicio_textview">Fecha de inicio:</string>
    <string name="text_fecha_fin_textview">Fecha de fin:</string>
    <string name="text_farmaco_tratamiento_textview">Fármaco:</string>
    <string name="text_dosis_tratamientos_textview">Dosis:</string>
    <string name="text_forma_administracion_tramiento_textview">Forma de administración:</string>
    <string name="text_tab_tratamientos_actuales">Actuales</string>
    <string name="text_tab_tratamientos_anteriores">Anteriores</string>
    <string name="text_tab_vacunas_hechas">Administradas</string>
    <string name="text_tab_vacunas_pendientes">Pendientes</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_vacuna_textview">Vacuna:</string>
    <string name="text_fecha_textview_diagnosticos">Fecha:</string>
    <string name="text_diagnostico_textview">Diagnóstico:</string>
    <string name="text_descripcion_diagnostico_textview">Descripción:</string>
    <string name="text_pruebas_diagnostico_textview">Pruebas:</string>
    <string name="text_tratamiento_diagnostico_textview">Tratamiento:</string>
    <string name="text_ver_tratamiento_button">Ver Tratamiento</string>
    <string name="text_ver_diagnostico_tratamientos_mi_mascotabutton">Ver Diagnóstico</string>
    <string name="text_apellidos_textview">Apellidos</string>
    <string name="text_dni_textview">DNI/NIE</string>
    <string name="text_telefono_textview">Teléfono</string>
    <string name="text_direccion_textview">Dirección</string>
    <string name="text_localidad_textview">Localidad</string>
    <string name="text_radiobutton_hombre">Hombre</string>
    <string name="text_radiobutton_mujer">Mujer</string>
    <string name="text_ver_mascotas_cliente_button">Ver Mascotas</string>
    <string name="text_ver_cliente_button">Ver Cliente</string>
    <string name="text_ver_consultas_cliente_button">Ver Consultas</string>
    <string name="text_ver_citas_cliente_button">Ver Citas</string>
    <string name="text_agregar_mascota_button">Agregar Mascota</string>
    <string name="text_sexo_textview">Sexo</string>
    <string name="text_especie_textview">Especie</string>
    <string name="text_raza_textview">Raza</string>
    <string name="text_edad_textview">Edad</string>
    <string name="text_fecha_nacimiento_textview">Fecha Nacimiento</string>
    <string name="text_peso_textview">Peso</string>
    <string name="text_kg_textview">Kg</string>
    <string name="text_responder_consulta_button">Responder consulta</string>
    <string name="text_responder_button">Responder</string>
    <string name="text_respuesta_editText">Escriba su respuesta...</string>
    <string name="text_cerrar_consulta_button">Cerrar Consulta</string>
    <string name="text_web_textview">Web</string>
    <string name="text_telefono1_textview">Teléfono 1</string>
    <string name="text_telefono2_textview">Teléfono 2</string>
    <string name="text_codigo_postal_textview">Código Postal</string>
    <string name="text_horario_textview">Horario</string>
    <string name="text_horas_textview">Horas</string>
    <string name="text_editar_info_button">Editar información</string>
    <string name="text_cita_realizada_textview">Cita Realizada</string>
    <string name="text_id_cliente_textview">ID Cliente:</string>
    <string name="text_dni_nie_textview">DNI/NIE:</string>
    <string name="text_email_textview">Email:</string>
    <string name="text_direccion_cliente_textview">Dirección:</string>
    <string name="text_localidad_cliente_textview">Localidad:</string>
    <string name="text_telefono_cliente_textview">Teléfono:</string>
    <string name="text_numero_mascotas_textview">Nº Mascotas:</string>
    <string name="text_numero_citas_textview">Nº Citas Realizadas:</string>
    <string name="text_numero_consultas_textview">Nº Consultas Realizadas:</string>
    <string name="text_agregar_vacuna_textview">Agregar vacuna</string>
    <string name="text_fecha_vacuna_textview">Hecha:</string>
    <string name="text_siguiente_fecha_textview">Siguiente Fecha:</string>
    <string name="text_dosis_actual_textview">Dosis Actual:</string>
    <string name="text_siguiente_dosis_textview">Dosis Siguiente:</string>
    <string name="text_dosis_dialog_textview">Dosis</string>
    <string name="text_vacuna_dialog_textview">Vacuna</string>
    <string name="text_agregar_diagnostico_button">Agregar Diagnóstico</string>
    <string name="text_anamnesis_textview">Anamnesis:</string>
    <string name="text_diagnostico_hint_textview">Diagnóstico</string>
    <string name="text_anamnesis_hint_textview">Anamnesis</string>
    <string name="text_pruebas_hint_textview">Pruebas</string>
    <string name="text_tratamiento_textview">Tratamiento</string>
    <string name="text_farmaco_hint_textview">Fármaco</string>
    <string name="text_forma_administracion_hint_textview">Forma de administración</string>
    <string name="text_fecha_inicio_hint_textview">Fecha de inicio del tratamiento</string>
    <string name="text_fecha_fin_hint_textview">Fecha de fin de tratamiento</string>
    <string name="text_edad_info_textview">Edad:</string>
    <string name="text_especie_info_textview">Especie:</string>
    <string name="text_raza_info_textview">Raza:</string>
    <string name="text_peso_info_textview">Peso:</string>
    <string name="text_sexo_info_textview">Sexo:</string>
    <string name="text_cambiar_foto_button">Cambiar foto</string>
    <string name="text_propietario_info">A nombre de:</string>
    <string name="text_fecha_nacimiento_info_textview">Fecha de nacimiento:</string>
    <string name="text_vacunas_info_textview">Nº Vacunas:</string>
    <string name="text_diagnosticos_info_textview">Nº Diagnósticos:</string>
    <string name="text_macho_radiobutton">Macho</string>
    <string name="text_hembra_radiobutton">Hembra</string>
    <string name="text_edad_humana_mascota_textview">Edad Humana:</string>
    <string name="text_mapa">Mapa</string>
</resources>
