<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cliente.pantalla_confirmar_cita"
    android:background="@drawable/fondo_mi_veterinario">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_confirmar_cita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/text_bienvenida_confirmar_cita_toolbar" />

    <ImageButton
        android:id="@+id/imageButton_llamar_confirmar_cita"
        android:layout_width="69dp"
        android:layout_height="68dp"
        android:layout_marginTop="12dp"
        android:adjustViewBounds="true"
        android:background="#00FFFFFF"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_confirmar_cita_llamada"
        app:srcCompat="@drawable/llamada_principal_button_selector" />

    <Spinner
        android:id="@+id/spinner_mascotas_confirmar_cita"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|top"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_llamar_confirmar_cita" />

    <TextView
        android:id="@+id/textView_mascota_confirmar_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/text_mascota_textview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton_llamar_confirmar_cita" />

    <TextView
        android:id="@+id/textView_motivo_confirmar_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="50dp"
        android:text="@string/text_motivo_textview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_mascota_confirmar_cita" />

    <Spinner
        android:id="@+id/spinner_motivos_confirmar_cita"
        style="@android:style/Widget.Spinner.DropDown"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="start|top"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_mascotas_confirmar_cita" />

    <EditText
        android:id="@+id/editText_dia"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/text_día_editText"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner_motivos_confirmar_cita" />

    <TextView
        android:id="@+id/textView_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="55dp"
        android:text="@string/text_dia_textview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_motivo_confirmar_cita" />

    <TextView
        android:id="@+id/textView_hora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/text_hora_textview"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_dia" />

    <EditText
        android:id="@+id/editText_hora"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="false"
        android:hint="@string/text_hora_editText"
        android:importantForAutofill="no"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_dia" />

    <TextView
        android:id="@+id/textView_confirmar_cita_llamada"
        android:layout_width="318dp"
        android:layout_height="113dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/text_mensaje_informativo_confirmar_cita_textview"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_confirmar_cita" />

    <Button
        android:id="@+id/button_confirmar_cita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/text_bienvenida_confirmar_cita_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>