<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#242832"
    android:theme="@style/AppTheme"
    tools:context=".cliente.pantalla_mi_mascota_vacunas">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mi_mascota_vacunas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_mi_mascota_vacunas"
        android:layout_width="132dp"
        android:layout_height="121dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_mi_mascota_vacunas" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout_vacunas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_mi_mascota_vacunas"
        app:tabGravity="fill">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_vacunas_hechas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_vacunas_hechas" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tab_vacunas_pendientes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tab_vacunas_pendientes" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewpager_vacunas"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tablayout_vacunas" />
</androidx.constraintlayout.widget.ConstraintLayout>